--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A small library for accessing React component events as functional reactive streams",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d lib"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,11 @@
   "dependencies": {
     "kefir": "^3.2.0",
     "react": "^0.14.7"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "mocha": "^2.4.5"
   }
 }
