--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A small library for accessing React component events as functional reactive streams",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-register",
     "build": "babel src -d lib"
   },
   "repository": {
@@ -36,6 +36,8 @@
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "mocha": "^2.4.5"
+    "babel-register": "^6.5.2",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.7"
   }
 }
