--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "url": "https://github.com/Lokeh/react-streamable/issues"
   },
   "homepage": "https://github.com/Lokeh/react-streamable#readme",
-  "dependencies": {
+  "peerDependencies": {
     "kefir": "^3.2.0",
     "react": "^0.14.7"
   },
