--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,13 @@
     "compilerOptions": {
         "outDir": "./build",
         "allowJs": true,
-        "target": "es5"
+        "target": "es5",
+        "jsx": "react"
     },
     "include": [
         "./src/**/*"
+    ],
+    "files": [
+        "node_modules/rx/ts/rx.all.d.ts"
     ]
 }
