--- a/package.json
+++ b/package.json
@@ -31,20 +31,21 @@
   "homepage": "https://github.com/Lokeh/observe-component#readme",
   "peerDependencies": {
     "kefir": "^3.2.0",
-    "react": "^0.14.7",
     "rx": "^4.0.8"
   },
   "devDependencies": {
     "@types/react": "^0.14.54",
     "@types/react-dom": "^0.14.19",
-    "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.5.2",
     "mocha": "^2.4.5",
-    "react-addons-test-utils": "^0.14.7",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1",
     "sinon": "^1.17.3",
     "typescript": "^2.1.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^15.4.1"
+  }
 }
