--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "compilerOptions": {
         "outDir": "./build",
-        "allowJs": true,
+        "allowJs": false,
         "target": "es5",
-        "jsx": "react"
+        "jsx": "react",
+        "declaration": true
     },
     "include": [
         "./src/**/*"
