--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
         "allowJs": false,
         "target": "es5",
         "jsx": "react",
-        "declaration": true,
-        "sourceMap": true
+        "declaration": true
     },
     "include": [
         "./src/**/*"
